# CheStrat

./: .gitignore  CMakeLists.txt  README.md  generate_pieces.py
gui/: gui.cpp  gui.h  main.cpp  renderer.cpp  renderer.h
src/core/: bitboard.cpp  bitboard.h  board.cpp  board.h  move.h  movegen.cpp  movegen.h  types.h
src/engine/: engine.cpp  engine.h
src/eval/: evaluation.cpp  evaluation.h  pst.h
src/search/: search.cpp  search.h  ttable.cpp  ttable.h
